# MayaMirrorSkinWeightsUV

./: CMakeLists.txt  MirrorSkinWeightsUV.cpp  MirrorSkinWeightsUV.h  MirrorSkinWeightsUVMain.cpp  README.md
src/: MirrorSkinWeightsUV.cpp  MirrorSkinWeightsUV.h  MirrorSkinWeightsUVMain.cpp
